--- a/locales/ko.json
+++ b/locales/ko.json
@@ -29,11 +29,11 @@
             "no_mic_device_detected_error": "마이크 디바이스를 찾지 못했습니다.",
             "no_speaker_device_detected_error": "스피커 디바이스를 찾지 못했습니다.",
             "translation_engine_limit_error": "번역 엔진을 자동으로 변경했습니다. 대상 번역 엔진에 대한 요청이 너무 많아 일시적으로 접근이 제한되었습니다. 해당 번역 엔진을 사용하려면 잠시 기다린 후 VRCT를 재시작하여 다시 시도해 보시기 바랍니다",
-            "detected_by_word_filter": "단어 필터에 등록된 단어 %{detected_message}(이)가 감지되어 전송하지 않았습니다.",
-            "selected_your_language": "'당신의 언어'가 %{your_language}(으)로 설정되었습니다.",
-            "selected_target_language": "'상대방의 언어'가 %{target_language}(으)로 설정되었습니다.",
-            "switched_language_preset_tab": "언어 프리셋 번호 %{tab_no}로 전환되었습니다.",
-            "latest_language_setting": "현재 '당신의 언어'는 %{your_language}, '상대방의 언어'는 %{target_language}(으)로 설정되어 있습니다.",
+            "detected_by_word_filter": "단어 필터에 등록된 단어 {{detected_message}}(이)가 감지되어 전송하지 않았습니다.",
+            "selected_your_language": "'당신의 언어'가 {{your_language}}(으)로 설정되었습니다.",
+            "selected_target_language": "'상대방의 언어'가 {{target_language}}(으)로 설정되었습니다.",
+            "switched_language_preset_tab": "언어 프리셋 번호 {{tab_no}}로 전환되었습니다.",
+            "latest_language_setting": "현재 '당신의 언어'는 {{your_language}}, '상대방의 언어'는 {{target_language}}(으)로 설정되어 있습니다.",
             "opened_web_page_booth": "브라우저에서 Booth 페이지를 열었습니다.",
             "opened_web_page_vrct_documents": "웹 브라우저에서 VRCT 문서 페이지가 열렸습니다.\n문제, 요청 또는 문의 사항이 있는 경우 문서 페이지 하단의 링크, '문의 양식' 또는 X(구 트위터)를 통해 언제든지 문의해 주세요!"
         },
@@ -44,7 +44,7 @@
             "deny_update_software": "나중에 하기",
             "accept_update_software": "업데이트 및 재시작",
             "updating": "업데이트 중...",
-            "detected_over_ui_size": "현재 UI 크기: %{current_ui_size}\nVRCT의 창 크기가 사용자의 디스플레이 크기보다 클 수 있습니다. \n* 디스플레이 크기에 따라 여러 번 재설정해야 할 수도 있습니다.",
+            "detected_over_ui_size": "현재 UI 크기: {{current_ui_size}}\nVRCT의 창 크기가 사용자의 디스플레이 크기보다 클 수 있습니다. \n* 디스플레이 크기에 따라 여러 번 재설정해야 할 수도 있습니다.",
             "deny_adjust_ui_size": "지금 상태를 유지",
             "accept_adjust_ui_size": "작게 줄이고 재시작"
         }
@@ -57,7 +57,7 @@
     "config_window": {
         "config_title": "설정",
         "compact_mode": "컴팩트 모드",
-        "version": "버전 %{version}",
+        "version": "버전 {{version}}",
         "restart_message": "재시작하여 변경 사항을 적용합니다.",
         "common_error_message": {
             "invalid_value": "유효하지 않은 값입니다."
@@ -111,12 +111,12 @@
         "ctranslate2_weight_type": {
             "label": "번역 모델",
             "desc": "오프라인 번역 시의 번역 모델을 변경합니다.",
-            "small": "일반 모델 (%{capacity})",
-            "large": "정밀 모델 (%{capacity})"
+            "small": "일반 모델 ({{capacity}})",
+            "large": "정밀 모델 ({{capacity}})"
         },
         "deepl_auth_key": {
             "label": "DeepL 인증키",
-            "desc": "사용시 메인화면에 있는 %{translator}를 DeepL_API로 변경해 주세요.\n지원하지 않는 언어도 있습니다.",
+            "desc": "사용시 메인화면에 있는 {{translator}}를 DeepL_API로 변경해 주세요.\n지원하지 않는 언어도 있습니다.",
             "open_auth_key_webpage": "DeepL 계정 페이지 열기",
             "auth_key_success": "인증키 갱신이 완료되었습니다.",
             "auth_key_error": "인증키가 잘못되었거나 API 사용 제한이 상한에 도달했습니다."
@@ -132,17 +132,17 @@
             "desc_for_automatic": "마이크의 입력 감도를 자동으로 조절합니다.",
             "label_for_manual": "음성 입력 최소 볼륨 (현재 설정: 수동)",
             "desc_for_manual": "슬라이더를 움직여 입력 감도를 수동으로 조절합니다. 마이크 아이콘을 누르면 실제 음성의 볼륨을 확인하며 감도를 조절할 수 있습니다.",
-            "error_message": "0에서 %{max}까지의 숫자로만 설정할 수 있습니다."
+            "error_message": "0에서 {{max}}까지의 숫자로만 설정할 수 있습니다."
         },
         "mic_record_timeout": {
             "label": "최대 무음 시간",
             "desc": "무음을 감지하고 설정된 시간(초)만큼의 시간이 지나면 음성 입력이 종료된 것으로 판단합니다.",
-            "error_message": "0 이상에서 '%{mic_phrase_timeout_label}'보다 클 수 없습니다."
+            "error_message": "0 이상에서 '{{mic_phrase_timeout_label}}'보다 클 수 없습니다."
         },
         "mic_phrase_timeout": {
             "label": "최대 인식 시간",
             "desc": "설정된 초 단위로 음성인식 처리가 이루어집니다.",
-            "error_message": "0 이상에서 '%{mic_record_timeout_label}'보다 작을 수 없습니다."
+            "error_message": "0 이상에서 '{{mic_record_timeout_label}}'보다 작을 수 없습니다."
         },
         "mic_max_phrase": {
             "label": "최대 입력 절(phrases) 수",
@@ -153,7 +153,7 @@
             "label": "단어 필터",
             "desc": "등록된 단어가 감지되면 해당 문장은 전송되지 않습니다. \n ',' 쉼표로 구분하면 여러 단어를 추가할 수 있습니다. \n* 중복된 단어는 등록되지 않습니다.",
             "add_button_label": "추가",
-            "count_desc": "현재 등록되어 있는 단어 수: %{count}"
+            "count_desc": "현재 등록되어 있는 단어 수: {{count}}"
         },
         "speaker_device": {
             "label": "스피커 장치"
@@ -163,18 +163,18 @@
             "desc_for_automatic": "스피커의 입력 감도를 자동으로 조절합니다.",
             "label_for_manual": "음성 입력 최소 볼륨 (현재 설정: 수동)",
             "desc_for_manual": "슬라이더를 움직여 입력 감도를 수동으로 조절합니다. 헤드폰 아이콘을 누르면 실제 음성의 볼륨을 확인하며 감도를 조절할 수 있습니다.",
-            "error_message": "0에서 %{max}까지의 숫자로만 설정할 수 있습니다.",
+            "error_message": "0에서 {{max}}까지의 숫자로만 설정할 수 있습니다.",
             "no_device_error_message": "스피커 디바이스를 찾지 못했습니다."
         },
         "speaker_record_timeout": {
             "label": "최대 무음 시간",
             "desc": "무음을 감지하고 설정된 시간(초)만큼의 시간이 지나면 음성 입력이 종료된 것으로 판단합니다.",
-            "error_message": "0 이상에서 '%{speaker_phrase_timeout_label}'보다 클 수 없습니다."
+            "error_message": "0 이상에서 '{{speaker_phrase_timeout_label}}'보다 클 수 없습니다."
         },
         "speaker_phrase_timeout": {
             "label": "최대 인식 시간",
             "desc": "설정된 초 단위로 음성인식 처리가 이루어집니다.",
-            "error_message": "0 이상에서 '%{speaker_record_timeout_label}'보다 작을 수 없습니다."
+            "error_message": "0 이상에서 '{{speaker_record_timeout_label}}'보다 작을 수 없습니다."
         },
         "speaker_max_phrase": {
             "label": "최대 입력 절(phrases) 수",
@@ -188,8 +188,8 @@
         "whisper_weight_type": {
             "label": "Whisper 모델 타입",
             "desc": "기본적으로 용량이 많은 모델일수록 정밀도는 높지만, 음성 인식의 시간이 늘어나며 CPU 사용률도 늘어나요.각 모델의 설명은 문서를 참조해주세요.\n※특히 medium보다 용량이 큰 모델은 CPU의 성능에 따라서는 사용조차 어려울 수 있어요. ",
-            "model_template": "%{model_name} 모델 (%{capacity})",
-            "recommended_model_template": "%{model_name} 모델 (%{capacity}) (권장)"
+            "model_template": "{{model_name}} 모델 ({{capacity}})",
+            "recommended_model_template": "{{model_name}} 모델 ({{capacity}}) (권장)"
         },
         "auto_clear_the_message_box": {
             "label": "챗박스 자동 삭제"
