--- a/locales/ja.json
+++ b/locales/ja.json
@@ -29,11 +29,11 @@
             "no_mic_device_detected_error": "マイクデバイスが検出されませんでした。",
             "no_speaker_device_detected_error": "スピーカーデバイスが検出されませんでした。",
             "translation_engine_limit_error": "翻訳エンジンを自動的に変更しました。対象翻訳エンジンへのリクエストが多すぎるため、一時的にアクセスが制限されています。同じ翻訳エンジンを使用したい場合はしばらく待ってから、VRCTの再起動をしてもう一度試してみてください。",
-            "detected_by_word_filter": "ワードフィルターに登録されている単語 %{detected_message} が検出されたため送信しませんでした。",
-            "selected_your_language": "「あなたの言語」 を %{your_language} に設定しました。",
-            "selected_target_language": "「相手の言語」 を %{target_language} に設定しました。",
-            "switched_language_preset_tab": "言語プリセット番号 %{tab_no} に切り替わりました。",
-            "latest_language_setting": "現在「あなたの言語」は %{your_language}、「相手の言語」は %{target_language} に設定されています。",
+            "detected_by_word_filter": "ワードフィルターに登録されている単語 {{detected_message}} が検出されたため送信しませんでした。",
+            "selected_your_language": "「あなたの言語」 を {{your_language}} に設定しました。",
+            "selected_target_language": "「相手の言語」 を {{target_language}} に設定しました。",
+            "switched_language_preset_tab": "言語プリセット番号 {{tab_no}} に切り替わりました。",
+            "latest_language_setting": "現在「あなたの言語」は {{your_language}}、「相手の言語」は {{target_language}} に設定されています。",
             "opened_web_page_booth": "お使いのブラウザで、Boothのページを開きました。",
             "opened_web_page_vrct_documents": "お使いのブラウザで、VRCTのドキュメントを開きました。使用方法などはそちらに記載されています。\n不具合、ご要望、その他お問い合わせはドキュメント最下部にあるLinks、「お問合せフォーム」もしくはX (元Twitter) にて気軽にご連絡ください！"
         },
@@ -46,7 +46,7 @@
             "deny_update_software": "後でする",
             "accept_update_software": "アップデートして再起動",
             "updating": "アップデート中...",
-            "detected_over_ui_size": "現在のUI サイズ: %{current_ui_size}\nVRCTのウィンドウサイズが、お使いのディスプレイサイズより大きい可能性があります。\n※ディスプレイサイズによっては、何度か再設定が必要な場合があります。",
+            "detected_over_ui_size": "現在のUI サイズ: {{current_ui_size}}\nVRCTのウィンドウサイズが、お使いのディスプレイサイズより大きい可能性があります。\n※ディスプレイサイズによっては、何度か再設定が必要な場合があります。",
             "deny_adjust_ui_size": "このサイズのままで良い",
             "accept_adjust_ui_size": "小さく設定して再起動"
         }
@@ -72,7 +72,7 @@
     "config_window": {
         "config_title": "設定",
         "compact_mode": "コンパクトモード",
-        "version": "バージョン %{version}",
+        "version": "バージョン {{version}}",
         "restart_message": "再起動して変更を適用する。",
         "common_error_message": {
             "invalid_value": "無効な値です。"
@@ -125,12 +125,12 @@
         "ctranslate2_weight_type": {
             "label": "オフライン翻訳のタイプ",
             "desc": "翻訳エンジン（オフライン翻訳）で翻訳する際に、使用する翻訳モデルを選択できます。",
-            "small": "通常モデル (%{capacity})",
-            "large": "高精度モデル (%{capacity})"
+            "small": "通常モデル ({{capacity}})",
+            "large": "高精度モデル ({{capacity}})"
         },
         "deepl_auth_key": {
             "label": "DeepL 認証キー",
-            "desc": "使用の際は、メイン画面にある %{translator} をDeepL_APIに変更してください。\n※対応していない言語もあります。",
+            "desc": "使用の際は、メイン画面にある {{translator}} をDeepL_APIに変更してください。\n※対応していない言語もあります。",
             "open_auth_key_webpage": "DeepLアカウントページを開く",
             "auth_key_success": "認証キーの更新が完了しました。",
             "auth_key_error": "認証キーが間違っているか、API使用制限が上限に達しています。"
@@ -146,17 +146,17 @@
             "desc_for_automatic": "マイクの入力感度を自動的に調節する。",
             "label_for_manual": "マイク入力感度の調整 (現在の設定: 手動)",
             "desc_for_manual": "スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。",
-            "error_message": "0 から %{max} までの数値で設定できます。"
+            "error_message": "0 から {{max}} までの数値で設定できます。"
         },
         "mic_record_timeout": {
             "label": "入力が終了したとみなす無音時間",
             "desc": "無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。",
-            "error_message": "0 以上で 「%{mic_phrase_timeout_label}」より大きくすることはできません。"
+            "error_message": "0 以上で 「{{mic_phrase_timeout_label}}」より大きくすることはできません。"
         },
         "mic_phrase_timeout": {
             "label": "一度に文字起こしする時間の長さ",
             "desc": "設定された秒数ごとに文字起こし処理が行われます。",
-            "error_message": "0 以上で 「%{mic_record_timeout_label}」より小さくすることはできません。"
+            "error_message": "0 以上で 「{{mic_record_timeout_label}}」より小さくすることはできません。"
         },
         "mic_max_phrase": {
             "label": "送信するまでに保持する単語数",
@@ -167,7 +167,7 @@
             "label": "ワードフィルター",
             "desc": "登録された単語を検出すると、その文章は送信されません。\n「,」カンマで区切ると、まとめて複数の単語を追加できます。\n※重複した単語は登録されません。",
             "add_button_label": "追加",
-            "count_desc": "現在登録されている単語数: %{count}"
+            "count_desc": "現在登録されている単語数: {{count}}"
         },
         "speaker_device": {
             "label": "スピーカー （デバイス）"
@@ -177,18 +177,18 @@
             "desc_for_automatic": "スピーカーの入力感度を自動的に調節する。",
             "label_for_manual": "スピーカー入力感度の調整 (現在の設定: 手動)",
             "desc_for_manual": "スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実際に音声を聞き取り、音量を確認しながら調節できます。",
-            "error_message": "0 から %{max} までの数値で設定できます。",
+            "error_message": "0 から {{max}} までの数値で設定できます。",
             "no_device_error_message": "スピーカーデバイスが検出されませんでした。"
         },
         "speaker_record_timeout": {
             "label": "入力が終了したとみなす無音時間",
             "desc": "無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。",
-            "error_message": "0 以上で 「%{speaker_phrase_timeout_label}」より大きくすることはできません。"
+            "error_message": "0 以上で 「{{speaker_phrase_timeout_label}}」より大きくすることはできません。"
         },
         "speaker_phrase_timeout": {
             "label": "一度に文字起こしする時間の長さ",
             "desc": "設定された秒数ごとに文字起こし処理が行われます。",
-            "error_message": "0 以上で 「%{speaker_record_timeout_label}」より小さくすることはできません。"
+            "error_message": "0 以上で 「{{speaker_record_timeout_label}}」より小さくすることはできません。"
         },
         "speaker_max_phrase": {
             "label": "ログとして表示するまでに保持する単語数",
@@ -202,8 +202,8 @@
         "whisper_weight_type": {
             "label": "Whisperモデルのタイプ",
             "desc": "基本的に、容量が多いモデルほど精度は高いですが、文字起こしまでの時間が伸び、CPU使用率も増加します。各モデルの説明はドキュメントをご覧ください。\n※特にmediumより容量の大きいモデルは、CPUの性能によっては使用すらも困難です。",
-            "model_template": "%{model_name} モデル (%{capacity})",
-            "recommended_model_template": "%{model_name} モデル (%{capacity}) (推奨)"
+            "model_template": "{{model_name}} モデル ({{capacity}})",
+            "recommended_model_template": "{{model_name}} モデル ({{capacity}}) (推奨)"
         },
         "enable_overlay_small_log": {
             "label": "Overlay機能を有効",
