[Update] Config Page: Add Device tab. add mic host list.(not selectable yet.)

--- a/locales/en.json
+++ b/locales/en.json
@@ -80,6 +80,7 @@
             "invalid_value": "Invalid value."
         },
         "side_menu_labels": {
+            "device": "Device",
             "appearance": "Appearance",
             "translation": "Translation",
             "transcription": "Transcription",
