--- a/locales/ko.json
+++ b/locales/ko.json
@@ -98,7 +98,7 @@
             "label": "폰트"
         },
         "ui_language": {
-            "label": "UI 언어 / UI Language"
+            "label": "UI 언어"
         },
         "to_restore_main_page_geometry": {
             "label": "메인 화면 위치 기억",
