--- a/locales/zh-Hans.yml
+++ b/locales/zh-Hans.yml
@@ -97,8 +97,8 @@ config_window:
     transcription_speaker: "スピーカー"
     transcription_internal_model: "音声認識モデル"
     others: "その他"
-    others_send_message_formats: "メッセージフォーマット (送信)"
-    others_received_message_formats: "メッセージフォーマット (XSOverlay & Speaker2Chatbox)"
+    # others_send_message_formats: "メッセージフォーマット (送信)"
+    # others_received_message_formats: "メッセージフォーマット (XSOverlay & Speaker2Chatbox)"
     advanced_settings: "高度な設定"
 
 
@@ -239,9 +239,9 @@ config_window:
     show: "表示"
     show_and_disable_enter_key: "表示し、エンターキーでの送信を無効"
 
-  notice_xsoverlay:
-    label: "XSOverlayでの通知受け取り機能を有効"
-    desc: "文字起こし (受信) されたメッセージをXSOverlayの機能を使って通知として受け取れます。"
+  # notice_xsoverlay:
+  #   label: "XSOverlayでの通知受け取り機能を有効"
+  #   desc: "文字起こし (受信) されたメッセージをXSOverlayの機能を使って通知として受け取れます。"
 
   auto_export_message_logs:
     label: "会話ログを自動的に保存する"
@@ -257,29 +257,29 @@ config_window:
     desc: "サポート対象外ですが、VRChatにメッセージを送信せずに使う方法があります。送信したい場合、この機能を有効にする事を忘れないでください。"
 
 
-  send_message_format:
-    label: "送信するメッセージのフォーマット"
-    desc: "VRChatで相手に実際に見えるフォーマットを変更できます。\n[message]がメッセージに置換されます。"
-    example_text: "これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。"
-    error_message: "[message]という文字は使えません。"
+  # send_message_format:
+  #   label: "送信するメッセージのフォーマット"
+  #   desc: "VRChatで相手に実際に見えるフォーマットを変更できます。\n[message]がメッセージに置換されます。"
+  #   example_text: "これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。"
+  #   error_message: "[message]という文字は使えません。"
 
-  send_message_format_with_t:
-    label: "送信するメッセージのフォーマット（翻訳付き）"
-    desc: "VRChatで相手に実際に見えるフォーマットを変更できます。\n[message]がメッセージに置換され、[translation]が翻訳されたメッセージに置換されます。"
-    example_text: "これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。"
-    error_message: "[message]と[translation]という文字は使えません。"
+  # send_message_format_with_t:
+  #   label: "送信するメッセージのフォーマット（翻訳付き）"
+  #   desc: "VRChatで相手に実際に見えるフォーマットを変更できます。\n[message]がメッセージに置換され、[translation]が翻訳されたメッセージに置換されます。"
+  #   example_text: "これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。"
+  #   error_message: "[message]と[translation]という文字は使えません。"
 
-  received_message_format:
-    label: "受信するメッセージのフォーマット"
-    desc: "XSOverlay通知受け取り機能で使用されます。\n[message]がメッセージに置換されます。\n※Speaker2Chatboxでの送信機能にも使われます。"
-    example_text: "これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。"
-    error_message: "[message]という文字は使えません。"
+  # received_message_format:
+  #   label: "受信するメッセージのフォーマット"
+  #   desc: "XSOverlay通知受け取り機能で使用されます。\n[message]がメッセージに置換されます。\n※Speaker2Chatboxでの送信機能にも使われます。"
+  #   example_text: "これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。"
+  #   error_message: "[message]という文字は使えません。"
 
-  received_message_format_with_t:
-    label: "受信するメッセージのフォーマット（翻訳付き）"
-    desc: "XSOverlay通知受け取り機能で使用されます。\n[message]がメッセージに置換され、[translation]が翻訳されたメッセージに置換されます。\n※Speaker2Chatboxでの送信機能にも使われます。"
-    example_text: "これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。"
-    error_message: "[message]と[translation]という文字は使えません。"
+  # received_message_format_with_t:
+  #   label: "受信するメッセージのフォーマット（翻訳付き）"
+  #   desc: "XSOverlay通知受け取り機能で使用されます。\n[message]がメッセージに置換され、[translation]が翻訳されたメッセージに置換されます。\n※Speaker2Chatboxでの送信機能にも使われます。"
+  #   example_text: "これは例文です。フォントや改行箇所など、実際の表示とは異なる場合があります。"
+  #   error_message: "[message]と[translation]という文字は使えません。"
 
 
   osc_ip_address:
